--- a/templates/hosts.erb
+++ b/templates/hosts.erb
@@ -55,6 +55,6 @@ host        dhcp    user    moreUsers     # <--- do not edit this line
 #farside    0       craig   jill,jeff     # <--- example static IP host entry
 #larson     1       bill                  # <--- example DHCP host entry
 
-<% @hosts.sort_by{|host, data| host[:fqdn]}.each do |host| -%>
+<% @hosts.sort_by{|host| host['fqdn']}.each do |host| -%>
 <%= host['fqdn'] %>	0	<%= @owner %>	<%= @users %>
 <% end %>
